--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.18.2",
   "dependencies": {
+    "@google/genai": "^1.29.0",
     "@types/socket.io": "^3.0.2",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
