--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "lib": ["esnext"],
-    "types": ["node"],
+    "types": ["node", "jest"],
 
 
     "esModuleInterop": true,
